// -*- text -*-

  ChangeLog
  =========

This is a detailed list of ongoing changes.  Add changes to 
the top of this file.

Changes by R. Michaels on  26 May 2004
--------------------------------------

Added 3 voltage levels "v1" "v2" "v3"
To sum up, data in the tree:
    KprofNM
where K = l or r for left, right spectrometer
N = "x", "y", or "" for x, y position or amplitude, resp.
and (newly) "v1" "v2" "v3" for 3 control voltages.
M = "", "c", "r" for fully corrected, "calibrated", and
raw, resp.  See also my note on 20 May.


Changes by R. Holmes on  26 May 2004
--------------------------------------

Added macro/panchain.macro, a macro (well, duh) to create a chain of
pair trees from runs specified in a file whose name is passed as the
sole argument.  Time trees for these runs are created in the default
output directory.  A time tree is another tree with the same number of
entries as the pair tree; it contains only evt_ev_num_off and
m_ev_num_off, which are evt_ev_num and m_ev_num offset by a given
quantity, and run_num, the run number.  The offset is just the sum of
the largest event numbers in each of the preceding runs, so the effect
is to have event numbers that do not reset at start of run.  The time
trees are chained and friended to the chain of pair trees.

Thus you can plot anything you want vs. a global event number or
vs. run number, e.g.

   TChain* ch = panchain("panchain");
   ch->Draw("asym_bcm1:m_ev_num_off"); // BCM1 asym vs. global evt number
   ch->Draw("asym_bcm1:run_num"); // BCM1 asym vs. run number


Changes by R. Holmes on  24 May 2004
--------------------------------------

By request, added a "compress" table in the database which takes a
value from 0 to 9; this is the compression setting for writing the
ROOT file.

I also fixed a diagnostic output that mismatched its test (oversample
must be 1-25 but diagnostic said 0-25).

Files modified: TaDataBase.{cc,hh}, TaRun.{cc,hh}.


Changes by R. Holmes on  21 May 2004